# canon

./: .claudeignore  .gitignore  README.md  pyproject.toml
canon/: __init__.py  __main__.py  agent_context.py  amend.py  check.py  clarity.py  cli.py  config.py  graph.py  implement.py  interview.py  pedia_bridge.py  tasks.py  trace.py
canon/decompose/: __init__.py  base.py  dispatch.py  resolver.py
canon/decompose/strategies/: __init__.py  flow.py  spike_build.py  story_map.py  tasks.py  vertical_slice.py
canon/plugin/commands/: canon-decompose.md  canon-graph.md  canon-plan.md  canon-specify.md  canon-tasks.md  canon-trace.md
canon/plugin/skills/canon-review/: SKILL.md
canon/plugin/vscode/: .vscodeignore  LICENSE  README.md  extension.js  package.json
canon/render/: __init__.py  block.py
canon/schemas/: __init__.py  constitution.py  north_star.py  plan.py  spec.py
docs/: clarity-loop.md
tests/: test_amend.py  test_check.py  test_clarity.py  test_cli_smoke.py  test_config.py  test_decompose.py  test_graph.py  test_implement.py  test_interview.py  test_plugins.py  test_render.py  test_schemas.py  test_tasks.py  test_trace.py
tests/fixtures/: lineage.py
